/* eslint-disable @typescript-eslint/no-unused-vars */
/**
 * 该文件由脚本自动生成，如需修改请联系 PMC
 * This file generated by scripts of tdesign-api. `npm run api:docs Timeline Vue(PC) vitest,finalProject`
 * If you need to modify this file, contact PMC first please.
 */
import { mount } from '@vue/test-utils';
import type { Timeline, TimelineItem } from '..';
import { getTimelineDefaultMount, getTimelineItemMount } from './mount';

describe('Timeline Component', () => {
  const labelAlignClassNameMap = {
    left: 't-timeline-left',
    alternate: 't-timeline-alternate',
    right: 't-timeline-right',
  };
  Object.entries(labelAlignClassNameMap).forEach(([enumValue, expectedClassName]) => {
    it(`props.labelAlign is equal to ${enumValue}`, () => {
      let propValue = { true: true, false: false }[enumValue];
      propValue = propValue === undefined ? enumValue : propValue;
      const wrapper = getTimelineDefaultMount(Timeline, { labelAlign: propValue });
      expect(wrapper.classes(expectedClassName)).toBeTruthy();
    });
  });

  it('props.labelAlign: layout=horizontal labelAlign=top works fine', async () => {
    const wrapper = getTimelineDefaultMount(Timeline, { layout: 'horizontal', labelAlign: 'top' });
    await wrapper.vm.$nextTick();
    const domWrapper = wrapper.find('.t-timeline');
    expect(domWrapper.classes('t-timeline-top')).toBeTruthy();
  });

  it('props.labelAlign: layout=horizontal labelAlign=bottom works fine', async () => {
    const wrapper = getTimelineDefaultMount(Timeline, { layout: 'horizontal', labelAlign: 'bottom' });
    await wrapper.vm.$nextTick();
    const domWrapper = wrapper.find('.t-timeline');
    expect(domWrapper.classes('t-timeline-bottom')).toBeTruthy();
  });

  ['horizontal', 'vertical'].forEach((item) => {
    it(`props.layout is equal to ${item}`, () => {
      const wrapper = getTimelineDefaultMount(Timeline, { layout: item });
      expect(wrapper.classes(`t-timeline-${item}`)).toBeTruthy();
    });
  });

  ['alternate', 'same'].forEach((item) => {
    it(`props.mode is equal to ${item}`, () => {
      const wrapper = mount({
        render() {
          return <Timeline mode={item}></Timeline>;
        },
      });
      expect(wrapper.classes(`t-timeline-label--${item}`)).toBeTruthy();
    });
  });

  it('props.reverse works fine. `{".t-timeline-item__content":{"text":"Event4"}}` should exist', () => {
    const wrapper = getTimelineDefaultMount(Timeline, { reverse: true });
    expect(wrapper.find('.t-timeline-item__content').text()).toBe('Event4');
  });

  it('props.theme is equal dot', () => {
    const wrapper = getTimelineDefaultMount(Timeline, { theme: 'dot' });
    expect(wrapper.findAll('.t-timeline-item__tail--theme-dot').length).toBe(4);
  });
});

describe('TimelineItem Component', () => {
  it('props.content works fine', () => {
    const wrapper = mount({
      render() {
        return <TimelineItem content={(h) => <span class="custom-node">TNode</span>}></TimelineItem>;
      },
    });
    expect(wrapper.find('.custom-node').exists()).toBeTruthy();
    expect(wrapper.element).toMatchSnapshot();
  });

  it('slots.content works fine', () => {
    const wrapper = mount({
      render() {
        return <TimelineItem scopedSlots={{ content: (h) => <span class="custom-node">TNode</span> }}></TimelineItem>;
      },
    });
    expect(wrapper.find('.custom-node').exists()).toBeTruthy();
    expect(wrapper.element).toMatchSnapshot();
  });

  it('props.dot works fine', () => {
    const wrapper = mount({
      render() {
        return <TimelineItem dot={(h) => <span class="custom-node">TNode</span>}></TimelineItem>;
      },
    });
    expect(wrapper.find('.custom-node').exists()).toBeTruthy();
  });

  it('slots.dot works fine', () => {
    const wrapper = mount({
      render() {
        return <TimelineItem scopedSlots={{ dot: (h) => <span class="custom-node">TNode</span> }}></TimelineItem>;
      },
    });
    expect(wrapper.find('.custom-node').exists()).toBeTruthy();
  });

  const dotColorClassNameMap = {
    primary: 't-timeline-item__dot--primary',
    warning: 't-timeline-item__dot--warning',
    error: 't-timeline-item__dot--error',
    default: 't-timeline-item__dot--default',
  };
  Object.entries(dotColorClassNameMap).forEach(([enumValue, expectedClassName]) => {
    it(`props.dotColor is equal to ${enumValue}`, () => {
      let propValue = { true: true, false: false }[enumValue];
      propValue = propValue === undefined ? enumValue : propValue;
      const wrapper = mount({
        render() {
          return <TimelineItem dotColor={propValue}></TimelineItem>;
        },
      }).find('.t-timeline-item__dot');
      expect(wrapper.classes(expectedClassName)).toBeTruthy();
    });
  });

  it('props.dotColor is equal to yellowgreen', () => {
    const wrapper = mount({
      render() {
        return <TimelineItem dotColor={'yellowgreen'}></TimelineItem>;
      },
    });
    const domWrapper = wrapper.find('.t-timeline-item__dot');
    expect(domWrapper.element.style.borderColor).toBe('yellowgreen');
  });

  it('props.label works fine', () => {
    const wrapper = mount({
      render() {
        return <TimelineItem label={(h) => <span class="custom-node">TNode</span>}></TimelineItem>;
      },
    });
    expect(wrapper.find('.custom-node').exists()).toBeTruthy();
    expect(wrapper.element).toMatchSnapshot();
  });

  it('slots.label works fine', () => {
    const wrapper = mount({
      render() {
        return <TimelineItem scopedSlots={{ label: (h) => <span class="custom-node">TNode</span> }}></TimelineItem>;
      },
    });
    expect(wrapper.find('.custom-node').exists()).toBeTruthy();
    expect(wrapper.element).toMatchSnapshot();
  });

  it('props.labelAlign is equal left', () => {
    const wrapper = getTimelineItemMount(TimelineItem, { labelAlign: 'left' });
    expect(wrapper.findAll('.t-timeline-item:first-child.t-timeline-item-left').length).toBe(1);
  });

  it('props.loading: TimelineItem contains element `.t-timeline-item__dot .t-loading`', () => {
    // loading default value is
    const wrapper = mount({
      render() {
        return <TimelineItem></TimelineItem>;
      },
    });
    expect(wrapper.find('.t-timeline-item__dot .t-loading').exists()).toBeFalsy();
    // loading = false
    const wrapper1 = mount({
      render() {
        return <TimelineItem loading={false}></TimelineItem>;
      },
    });
    expect(wrapper1.find('.t-timeline-item__dot .t-loading').exists()).toBeFalsy();
    // loading = true
    const wrapper2 = mount({
      render() {
        return <TimelineItem loading={true}></TimelineItem>;
      },
    });
    expect(wrapper2.find('.t-timeline-item__dot .t-loading').exists()).toBeTruthy();
  });
});
