// Vitest Snapshot v1

exports[`TimelineItem Component > props.content works fine 1`] = `
<li
  class="t-timeline-item t-timeline-item-left t-timeline-item--last"
>
  <div
    class="t-timeline-item__wrapper"
  >
    <div
      class="t-timeline-item__dot  t-timeline-item__dot--primary"
    />
    <div
      class="t-timeline-item__tail t-timeline-item__tail--theme-undefined "
    />
  </div>
  <div
    class="t-timeline-item__content"
  >
    <span
      class="custom-node"
    >
      TNode
    </span>
  </div>
</li>
`;

exports[`TimelineItem Component > props.label works fine 1`] = `
<li
  class="t-timeline-item t-timeline-item-left t-timeline-item--last"
>
  <div
    class="t-timeline-item__label t-timeline-item__label--undefined"
  >
    <span
      class="custom-node"
    >
      TNode
    </span>
  </div>
  <div
    class="t-timeline-item__wrapper"
  >
    <div
      class="t-timeline-item__dot  t-timeline-item__dot--primary"
    />
    <div
      class="t-timeline-item__tail t-timeline-item__tail--theme-undefined "
    />
  </div>
  <div
    class="t-timeline-item__content"
  />
</li>
`;

exports[`TimelineItem Component > slots.content works fine 1`] = `
<li
  class="t-timeline-item t-timeline-item-left t-timeline-item--last"
>
  <div
    class="t-timeline-item__wrapper"
  >
    <div
      class="t-timeline-item__dot  t-timeline-item__dot--primary"
    />
    <div
      class="t-timeline-item__tail t-timeline-item__tail--theme-undefined "
    />
  </div>
  <div
    class="t-timeline-item__content"
  >
    <span
      class="custom-node"
    >
      TNode
    </span>
  </div>
</li>
`;

exports[`TimelineItem Component > slots.label works fine 1`] = `
<li
  class="t-timeline-item t-timeline-item-left t-timeline-item--last"
>
  <div
    class="t-timeline-item__label t-timeline-item__label--undefined"
  >
    <span
      class="custom-node"
    >
      TNode
    </span>
  </div>
  <div
    class="t-timeline-item__wrapper"
  >
    <div
      class="t-timeline-item__dot  t-timeline-item__dot--primary"
    />
    <div
      class="t-timeline-item__tail t-timeline-item__tail--theme-undefined "
    />
  </div>
  <div
    class="t-timeline-item__content"
  />
</li>
`;
